// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tooltip auto aligned (with bondaries) 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

<div
  className="exampleContainer"
  style={
    Object {
      "border": "solid 1px orangered",
      "display": "flex",
      "justifyContent": "space-between",
      "width": "600px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    Child
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        This is an auto aligned tooltip
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "border": "1px solid",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    Child
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        This is an auto aligned tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip auto aligned 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

<div
  style={
    Object {
      "display": "flex",
      "justifyContent": "space-between",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        This is an auto aligned tooltip
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "border": "1px solid",
        "position": "relative",
        "width": "50px",
      }
    }
  >
    <div
      className="c0"
    >
      <div
        className="c1"
      >
        This is an auto aligned tooltip
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip custom padding 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 30px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Left aligned with custom padding
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible false 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: hidden;
  opacity: 0;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

<div
  style={
    Object {
      "border": "1px",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Hey yo
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible true - center aligned 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "350px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      This is a center aligned tooltip
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible true - hideArrow 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      This is a left aligned tooltip without arrow
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible true - left aligned 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      This is a left aligned tooltip
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip isVisible true - right aligned 1`] = `
.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  right: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  right: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  right: 8px;
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      This is a right aligned tooltip
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip with card 1`] = `
.c2 {
  background-color: #ffffff;
  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  width: 100%;
  padding: 16px;
  box-sizing: border-box;
  border-radius: 4px;
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c1 {
  -webkit-transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  transition: visibility 0s linear 0.1s,opacity 0.1s linear;
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  position: absolute;
  z-index: 1000;
  top: 15px;
  padding: 8px;
  background-color: #ffffff;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  white-space: pre;
  color: #2f313a;
  font-family: lato,sans-serif;
  left: 0;
}

.c1:after,
.c1:before {
  bottom: 100%;
  border: solid 1px rgba(0,0,0,0.16);
  content: " ";
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.c1:before {
  border-color: transparent;
  border-bottom-color: rgba(0,0,0,0.16);
  border-width: 8px;
  left: 7px;
}

.c1:after {
  border-color: transparent;
  border-bottom-color: #ffffff;
  border-width: 7px;
  left: 8px;
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        overflow="hidden"
        width="100%"
      >
        this is a Card
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tooltip without content 1`] = `
.c0 {
  position: relative;
}

<div
  style={
    Object {
      "border": "1px solid",
      "position": "relative",
      "width": "250px",
    }
  }
>
  <div
    className="c0"
  />
</div>
`;
